--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<title>十方云</title>
-	<link rel="icon" type="image/icon.png" sizes="72x72" href="icon.png"/>
+	<link rel="icon" type="image/icon.png" sizes="72x72" href="images/icon.png"/>
 	<script>
     $(function() {
         $(".btn").click(function(){
@@ -17,19 +17,23 @@
 
 <ul class="nav nav-tabs" >
 <li ><a href = "index.html" > 主页</a ></li >
-
-</ul ><br ><h3>关于我 <small>我是谁?</small></h3><hr><table class="table table-bordered">
+<div class="alert alert-danger">每人的云电脑3DAY删除</div>
+	<body class="container"><div class="alert alert-success">云备份空间1G,5G,10G您可以在QQ群发送备份+设备代码即可</div>
+		<div class="alert alert-info"></strong>疑问？:</strong>为什么要删除云电脑<br>因为要让更多的人玩到</div>
+	
+</ul ><br ><h3>云电脑数量 <small>AML-=[:akh1@qia;x>/;aoowwjn33jaasiAON</small></h3><hr><table class="table table-bordered">
 
 	<tbody>
 		
 		
+						<tr>
+			<td>windows server 2022</td>
+			<td>505560573</a></td>
+	
+		</tr>     	  	
 	
 		
-						<tr>
-			<td>！</td>
-			<td>无</a></td>
-	
-		</tr>     	  		
+						
 	</tbody>
 	
 </table>© 2023-2023 十方云 | <a href='github.com'>github</a> 提供云计算支持 
