--- a/index.html
+++ b/index.html
@@ -281,7 +281,24 @@
 						      </div>
 						    </div>
 						  </div>
-						   
+						   <div class="card">
+						    <div class="card-header p-0" id="headingTwo" role="tab">
+						      <h2 class="mb-0">
+						        <button href="#collapseFour" class="d-flex py-3 px-4 align-items-center justify-content-between btn btn-link" data-parent="#accordion" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">
+						        	<p class="mb-0">为什么主页那么熟悉</p>
+						          <i class="fa" aria-hidden="true"> </i>
+						        </button>
+						      </h2>
+						    </div>
+						    <div class="collapse" id="collapseFour" role="tabpanel" aria-labelledby="headingTwo">
+						      <div class="card-body py-3 px-0">
+						      	<ol>
+						      		<li>因为这是简欢欢</li>
+						      		
+						      	</ol>
+						      </div>
+						    </div>
+						  </div>
 	        </div>
         </div>
     	</div>
