--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">首页</a></li>
-               <li class="nav-item cta active"><a href="1.html" class="nav-link">开始使用</a></li>
+	          <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="nav-link">我们的服务器网站</a></li>
+               <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/abc/" class="nav-link">账号分发网站</a></li>
+			<li class="nav-item cta active"><a href="1.html" class="nav-link">开始使用</a></li>
 	        </ul>
 	      </div>
 	    </div>
