--- a/1.html
+++ b/1.html
@@ -30,7 +30,11 @@
 						<tr>
 			<td>windows server 2022</td>
 			<td>505560573</a></td>
+					<tr>
+			<td>windows 10</td>
+			<td>172017296</a></td>
 	
+		</tr>     
 		</tr>     	  	
 	
 		
