--- a/1.html
+++ b/1.html
@@ -18,27 +18,74 @@
 <ul class="nav nav-tabs" >
 <li ><a href = "index.html" > 主页</a ></li >
 	</ul ><br >
-<div class="alert alert-danger">每人的云电脑3DAY删除</div>
-	<body class="container"><div class="alert alert-success">云备份空间1G,5G,10G您可以在QQ群发送备份+设备代码即可</div>
-		<div class="alert alert-info"></strong>疑问？:</strong>为什么要删除云电脑<br>因为要让更多的人玩到</div>
-	
-</ul ><br ><h3>云电脑数量 <small>AML-=[:akh1@qia;x>/;aoowwjn33jaasiAON</small></h3><hr><table class="table table-bordered">
 
-	<tbody>
-		
-		
-						<tr>
-			<td>windows server 2022</td>
-			<td>505560573</a></td>
+	<div class="panel panel-info">
+	    <div class="panel-heading">
+	    <h3 class="panel-title">已创建的云电脑</h3>
+	    </div>
+	    <div class="panel-body">
+	    <table class="table table-striped">
+
 					<tr>
 			<td>windows 10</td>
 			<td>172017296</a></td>
 	
 		</tr>     
 		</tr>     	  	
+    	
+	    </table>
+	    </div>
+	</div>
 	
 		
 						
 	</tbody>
+ <div class="panel panel-info">
+	    <div class="panel-heading">
+	    <h3 class="panel-title">云电脑</h3>
+	    </div>
+	    <div class="panel-body">
+	    <table class="table table-striped">
+
+
+	    <tbody>
+	    <tr>
+	    <td>运行时间</td>
+	    <td>2h30min</td>
+
+	    </tr>
+
+	    <tr>
+	    <td>云备份空间</td>
+	   <td>1G，2G，3G,4G,5G</td>
+
+	    </tr>
+	    <tr>
+	    <td>配置</td>
+	    <td>1c2g,2c4g,4c8g</td>
+
+	    </tr>
+
+	    <tr>
+	    <td>硬盘</td>
+	
+    	<td>20G,25G,30G,40G</td>
+    	</tr>
+
+		    <tr>
+	    <td>云电脑可运行</td>
+	
+    	<td>3DAY</td>
+    	</tr>
+		     <tr>
+	    <td>云备份</td>
+	
+    	<td>清除后有1DAY可覆盖在QQ群内输入备份+设备代码</td>
+    	</tr>
+    	</tbody>
+	    </table>
+	    </div>
+	</div>
+
 	
 </table>© 2023-2023 十方云 | <a href='github.com'>github</a> 提供云计算支持 
