--- a/1.html
+++ b/1.html
@@ -27,7 +27,7 @@
 	    <table class="table table-striped">
 
 					<tr>
-			<td>windows 10</td>
+			<td>windows 10 x64</td>
 			<td>172017296</a></td>
 	
 		</tr>     
