--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">十方云</h2>
-              <p>原创 简幻欢</p>
+              <p>免费公益</p>
        
             </div>
           </div>
