--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 	            <h1 class="mb-3"><span>公益免费,</span> <span>TODESK极低延迟,</span> <span>简单易用。</span></h1>
 	            <p>免费的云电脑，挂机时常2h30min(不代表所有时间！)</p>
 	            <p><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=-l5cDEMRJpWR02qi8fBCH2tDlrnInfM4&authKey=V5e6qzOCVVOnowTRS8tYdh93fdUQuHRiVaEEL1JzMiYbDGhZeepxzpjmrEKg8e7s&noverify=0&group_code=761392004" class="btn btn-secondary px-4 py-3">加入QQ</a></p>
-	          </div>
+	          <p><a href="ad/index.html" class="btn btn-secondary px-4 py-3">关于我们</a></p>
+	        
+			</div>
 	        </div>
 	    	</div>
       </div>
