--- a/1.html
+++ b/1.html
@@ -25,10 +25,21 @@
 	    </div>
 	    <div class="panel-body">
 	    <table class="table table-striped">
-
+<tr>
+			<td>系统</td>
+			<td>设备码</a></td>
+	
+		</tr>     
+		</tr>     	  	
 					<tr>
 			<td>windows 10 x64</td>
 			<td>找不到！</a></td>
+	
+		</tr>     
+		</tr>     	  	
+	  <tr>
+			<td>windows 10 x64</td>
+			<td>169505021</a></td>
 	
 		</tr>     
 		</tr>     	  	
