--- a/1.html
+++ b/1.html
@@ -17,6 +17,10 @@
 
 <ul class="nav nav-tabs" >
 <li ><a href = "index.html" > 主页</a ></li >
+	<li ><a href = "2.html" >已删除的云电脑</a ></li >
+	<li ><a href = "3.html" >已备份的云电脑</a ></li >
+	<li ><a href = "1.html" >已创建的云电脑</a ></li >
+	<li ><a href = "4.html" >提示</a ></li >
 	</ul ><br >
 
 	<div class="panel panel-info">
@@ -51,52 +55,5 @@
 		
 						
 	</tbody>
- <div class="panel panel-info">
-	    <div class="panel-heading">
-	    <h3 class="panel-title">云电脑</h3>
-	    </div>
-	    <div class="panel-body">
-	    <table class="table table-striped">
 
-
-	    <tbody>
-	    <tr>
-	    <td>运行时间</td>
-	    <td>2h30min</td>
-
-	    </tr>
-
-	    <tr>
-	    <td>云备份空间</td>
-	   <td>1G，2G，3G,4G,5G</td>
-
-	    </tr>
-	    <tr>
-	    <td>配置</td>
-	    <td>1c2g,2c4g,4c8g</td>
-
-	    </tr>
-
-	    <tr>
-	    <td>硬盘</td>
-	
-    	<td>20G,25G,30G,40G</td>
-    	</tr>
-
-		    <tr>
-	    <td>云电脑可运行</td>
-	
-    	<td>3DAY</td>
-    	</tr>
-		     <tr>
-	    <td>云备份</td>
-	
-    	<td>清除后有1DAY可覆盖在QQ群内输入备份+设备代码</td>
-    	</tr>
-    	</tbody>
-	    </table>
-	    </div>
-	</div>
-
-	
 </table>© 2023-2023 十方云 | <a href='github.com'>github</a> 提供云计算支持 
