--- a/2.html
+++ b/2.html
@@ -25,7 +25,7 @@
 
 	<div class="panel panel-info">
 	    <div class="panel-heading">
-	    <h3 class="panel-title">已创建的云电脑</h3>
+	    <h3 class="panel-title">已删除的云电脑</h3>
 	    </div>
 	    <div class="panel-body">
 	    <table class="table table-striped">
