--- a/1.html
+++ b/1.html
@@ -13,10 +13,10 @@
     });  
     </script>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
-  <body class="container"><h3 > 总览 <small ></small ></h3 ><hr >
+  <body class="container"><h3 > 已创建的云电脑 <small ></small ></h3 ><hr >
 
 <ul class="nav nav-tabs" >
-<li ><a href = "index.html" > 主页</a ></li >
+<li ><a href = "index.html" >主页</a ></li >
 	<li ><a href = "2.html" >已删除的云电脑</a ></li >
 	<li ><a href = "3.html" >已备份的云电脑</a ></li >
 	<li ><a href = "1.html" >已创建的云电脑</a ></li >
