--- a/1.html
+++ b/1.html
@@ -46,7 +46,13 @@
 			<td>169505021</a></td>
 	
 		</tr>     
-		</tr>     	  	
+		</tr>     	  
+ <tr>
+			<td>windows 10 x64</td>
+			<td>275829345</a></td>
+	
+		</tr>     
+		</tr>     	  
     	
 	    </table>
 	    </div>
