--- a/1.html
+++ b/1.html
@@ -52,7 +52,13 @@
 			<td>275829345</a></td>
 	
 		</tr>     
-		</tr>     	  
+		</tr>     
+<tr>
+			<td>windows 10 x64</td>
+			<td>274796998</a></td>
+	
+		</tr>     
+		</tr>     
     	
 	    </table>
 	    </div>
