--- a/3.html
+++ b/3.html
@@ -20,6 +20,7 @@
 	<li ><a href = "2.html" >已删除的云电脑</a ></li >
 	<li ><a href = "3.html" >已备份的云电脑</a ></li >
 	<li ><a href = "1.html" >已创建的云电脑</a ></li >
+	 <li ><a href = "5.html" >已激活的云电脑</a ></li >
 	<li ><a href = "4.html" >提示</a ></li >
 	</ul ><br >
 
