--- a/5.html
+++ b/5.html
@@ -26,7 +26,7 @@
 
 	<div class="panel panel-info">
 	    <div class="panel-heading">
-	    <h3 class="panel-title">已创建的云电脑</h3>
+	    <h3 class="panel-title">已激活的云电脑</h3>
 	    </div>
 	    <div class="panel-body">
 	    <table class="table table-striped">
