--- a/5.html
+++ b/5.html
@@ -13,7 +13,7 @@
     });  
     </script>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
-  <body class="container"><h3 > 已创建的云电脑 <small ></small ></h3 ><hr >
+  <body class="container"><h3 > 已激活的云电脑 <small ></small ></h3 ><hr >
 
 <ul class="nav nav-tabs" >
 <li ><a href = "index.html" >主页</a ></li >
