--- a/1.html
+++ b/1.html
@@ -32,31 +32,23 @@
 	    <table class="table table-striped">
 <tr>
 			<td>系统</td>
-			<td>设备码</a></td>
+			<td>设备码</td>
+	<td>名字</a></td>
 	
 		</tr>     
 		</tr>     	  	
-					<tr>
-			<td>windows 10 x64</td>
-			<td>找不到！</a></td>
-	
-		</tr>     
-		</tr>     	  	
-	  <tr>
-			<td>windows 10 x64</td>
-			<td>169505021</a></td>
-	
-		</tr>     
-		</tr>     	  
+				
  <tr>
 			<td>windows 10 x64</td>
-			<td>275829345</a></td>
+			<td>275829345</td>
+	 <td>十方公益云#1</a></td>
 	
 		</tr>     
 		</tr>     
 <tr>
 			<td>windows 10 x64</td>
-			<td>274796998</a></td>
+			<td>274796998</td>
+	<td>十方公益云#2</a></td>
 	
 		</tr>     
 		</tr>     
