--- a/3.html
+++ b/3.html
@@ -32,13 +32,15 @@
 	    <table class="table table-striped">
 <tr>
 			<td>系统</td>
-			<td>状态</a></td>
+			<td>状态</td>
+	<td>名字</a></td>
 	
 		</tr>     
 		</tr>     	  	
 					<tr>
 			<td>windows 10 x64</td>
-			<td>已备份</a></td>
+			<td>已备份</td>
+						<td>-</a></td>
 	
 		</tr>     
 		</tr>     	  	
