--- a/5.html
+++ b/5.html
@@ -32,31 +32,23 @@
 	    <table class="table table-striped">
 <tr>
 			<td>系统</td>
-			<td>激活状态</a></td>
+			<td>激活状态</td>
+	<td>名字</a></td>
 	
 		</tr>     
 		</tr>     	  	
-					<tr>
-			<td>windows 10 x64</td>
-			<td>激活</a></td>
-	
-		</tr>     
-		</tr>     	  	
-	  <tr>
-			<td>windows 10 x64</td>
-			<td>激活</a></td>
-	
-		</tr>     
-		</tr>     	  
+					
  <tr>
 			<td>windows 10 x64</td>
-			<td>激活</a></td>
+			<td>激活</td>
+	 <td>-</a></td>
 	
 		</tr>     
 		</tr>     
 <tr>
 			<td>windows 10 x64</td>
-			<td>激活</a></td>
+			<td>激活</td>
+	<td>-</a></td>
 	
 		</tr>     
 		</tr>     
