--- a/1.html
+++ b/1.html
@@ -33,7 +33,8 @@
 <tr>
 			<td>系统</td>
 			<td>设备码</td>
-	<td>名字</a></td>
+	<td>名字</td>
+		    <td>硬件</a></td>
 	
 		</tr>     
 		</tr>     	  	
@@ -41,14 +42,16 @@
  <tr>
 			<td>windows 10 x64</td>
 			<td>275829345</td>
-	 <td>十方公益云#1</a></td>
+	 <td>十方公益云#1</td>
+	 <td>2c2g,25GB</a></td>
 	
 		</tr>     
 		</tr>     
 <tr>
 			<td>windows 10 x64</td>
 			<td>274796998</td>
-	<td>十方公益云#2</a></td>
+	<td>十方公益云#2</td>
+	<td>2c2g,25GB</a></td>
 	
 		</tr>     
 		</tr>     
