--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">十方云</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu"></span> 展开
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
