--- a/1.html
+++ b/1.html
@@ -48,6 +48,15 @@
 	
 		</tr>     
 		</tr>     
+			
+<tr>
+			<td>windows 10 x64</td>
+			<td>531591818</td>
+	<td>taka</td>
+	<td>2c2g,25GB</a></td>
+	
+		</tr>     
+		</tr>     
     	
 	    </table>
 	    </div>
