--- a/2.html
+++ b/2.html
@@ -52,7 +52,14 @@
 	
 		</tr>     
 		</tr>     
-    	
+    	<tr>
+			<td>windows 10 x64</td>
+			<td>已备份</td>
+		<td>十方公益云#2</a></td>
+	
+	
+		</tr>     
+		</tr>     
     	
 	    </table>
 	    </div>
