--- a/1.html
+++ b/1.html
@@ -50,6 +50,14 @@
 	
 		</tr>     
 		</tr>     
+<tr>
+			<td>windows 10 x64</td>
+			<td>856625096</td>
+	<td>飞鸟</td>
+	<td>2c2g,22GB</a></td>
+	
+		</tr>     
+		</tr>     
     	
 	    </table>
 	    </div>
