--- a/1.html
+++ b/1.html
@@ -34,8 +34,8 @@
 			<td>系统</td>
 			<td>设备码</td>
 	<td>名字</td>
-		    <td>硬件</a></td>
-	
+		    <td>硬件</td>
+	<td>时间</a></td>
 		</tr>     
 		</tr>     	  	
 				
@@ -43,22 +43,18 @@
 
 			
 <tr>
-			<td>windows 10 x64</td>
-			<td>531591818</td>
-	<td>taka</td>
-	<td>4c4g,35GB</a></td>
+			<td>windows 11 x64</td>
+			<td>-</td>
+	<td>管理员</td>
+	<td>12c16g,512GB</td>
+	<td>永久</a></td>
+	</td>
 	
 		</tr>     
 		</tr>     
-<tr>
-			<td>windows 10 x64</td>
-			<td>856625069</td>
-	<td>飞鸟</td>
-	<td>2c2g,22GB</a></td>
+
 	
-		</tr>     
-		</tr>     
-    	
+	
 	    </table>
 	    </div>
 	</div>
