--- a/2.html
+++ b/2.html
@@ -60,7 +60,19 @@
 	
 		</tr>     
 		</tr>     
-    	
+    	<tr>
+			<td>windows 10 x64</td>
+			<td>已删除</td>
+	<td>飞鸟</a></td>
+		    </tr>     
+		</tr>  
+		    <tr>
+			<td>windows 10 x64</td>
+			<td>已删除</td>
+	<td>taka</a></td>
+	
+	</tr>     
+		</tr>  
 	    </table>
 	    </div>
 	</div>
