--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="nav-link">我们的服务器网站</a></li>
                <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/abc/" class="nav-link">账号分发网站</a></li>
+			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
 			<li class="nav-item cta active"><a href="1.html" class="nav-link">开始使用</a></li>
 	        </ul>
 	      </div>
@@ -50,7 +51,7 @@
 	            <h1 class="mb-3"><span>公益免费,</span> <span>TODESK极低延迟,</span> <span>简单易用。</span></h1>
 	            <p>免费的云电脑，挂机时常2h30min(不代表所有时间！)</p>
 	            <p><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=-l5cDEMRJpWR02qi8fBCH2tDlrnInfM4&authKey=V5e6qzOCVVOnowTRS8tYdh93fdUQuHRiVaEEL1JzMiYbDGhZeepxzpjmrEKg8e7s&noverify=0&group_code=761392004" class="btn btn-secondary px-4 py-3">加入QQ</a></p>
-	          <p><a href="ab/index.html" class="btn btn-secondary px-4 py-3">关于我们</a></p>
+	         
 	        
 			</div>
 	        </div>
