--- a/xz/index.html
+++ b/xz/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="我的世界全版本下载,我的世界手机版,我的世界国际版,我的世界免费下载,我的世界下载,minecraft,我的世界资源网,我的世界最新版">
-    <meta name="description" content="这里有大量的我的世界验证破解版，收录版本超过200+，全部免费下载，欢迎分享给您的好友">
-    <title>我的世界国际版全版本下载</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <title>下载</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="xz/assets/main.css">
@@ -14,12 +14,12 @@
 </head>
 <body>
 <div id="bodyclass" class="">
-    <div id="title1"><h3>您正在访问Minecraft国际版下载引导页</h3></div>
+    <div id="title1"><h3>您正在访问下载引导页</h3></div>
     <hr id="hr0" style="display:none">
     <div id="text1">正在向服务端请求页面...</div>
 <br>
-<a href="https://mcapks.net" class="text-decoration-none">点我跳过直接打开下载页</a><br>
-或访问<a href="https://xz.klpbbs.net" class="text-dark text-decoration-none">https://mcapks.com 或 https://xz.klpbbs.net</a><br>注意：上方效果纯属娱乐！<br>若无法加载请点击上方跳过。</div>
+<a href="https://1a2b-3c-4d.github.io/sfy/xz/xz.html" class="text-decoration-none">点我跳过直接打开下载页</a><br>
+或访问<a href="https://1a2b-3c-4d.github.io/sfy/xz/xz.html" class="text-dark text-decoration-none">慢慢等</a><br>注意：上方效果纯属娱乐！<br>若无法加载请点击上方跳过。</div>
 <br>
 <div class="_b8cq9azxkuk"></div>
 <script type="text/javascript">
@@ -37,10 +37,10 @@
 function hr1(){
     document.getElementById("hr0").style.display = "block";
     setTimeout('document.getElementById("text1").innerText = "完成！随后重载页面...";',200);
-    setTimeout("window.location.href='https://mcapks.net'",2000);
+    setTimeout("window.location.href='https://1a2b-3c-4d.github.io/sfy/xz/xz.html'",2000);
 }
 function title2(){
-    document.getElementById("title1").innerHTML = '<h3><i class="fa fa-send text-primary"></i>&nbsp;我的世界国际版下载</h3>';
+    document.getElementById("title1").innerHTML = '<h3><i class="fa fa-send text-primary"></i>&nbsp;下载</h3>';
     setTimeout('document.getElementById("text1").innerText = "正在写入基础样式,请稍后...";',100);
     setTimeout("hr1()",1000);
 }
