--- a/xz/xz.html
+++ b/xz/xz.html
@@ -4,7 +4,7 @@
 	<head>
     <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 	<link rel="stylesheet" href="bootstrap.min.css">
-	<title>十方云</title>
+	<title>下载</title>
 	<link rel="icon" type="image/icon.png" sizes="72x72" href="images/icon.png"/>
 	<script>
     $(function() {
@@ -15,54 +15,42 @@
     });  
     </script>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
-  <body class="container"><h3 > 已创建的云电脑 <small ></small ></h3 ><hr >
+  <body class="container"><h3 > 远程控制下载 <small ></small ></h3 ><hr >
 
 <ul class="nav nav-tabs" >
 <li ><a href = "index.html" >主页</a ></li >
-	<li ><a href = "2.html" >已删除的云电脑</a ></li >
-	<li ><a href = "3.html" >已备份的云电脑</a ></li >
-	<li ><a href = "1.html" >已创建的云电脑</a ></li >
-	 <li ><a href = "5.html" >已激活的云电脑</a ></li >
-	<li ><a href = "4.html" >提示</a ></li >
+	<li ><a href = "https://1a2b-3c-4d.github.io/sfy/" >主页</a ></li >
+	
 	</ul ><br >
 
 	<div class="panel panel-info">
 	    <div class="panel-heading">
-	    <h3 class="panel-title">已创建的云电脑</h3>
+	    <h3 class="panel-title">下载远程控制软件</h3>
 	    </div>
 	    <div class="panel-body">
 	    <table class="table table-striped">
 <tr>
-			<td>系统</td>
-<td>系统</td>
-			<td>设备码</a></td>
+			<td>名字</td>
+<td>密码</td>
+			<td>控件</a></td>
 	
 		</tr>     
 		</tr>     	  	
 					<tr>
-			<td>windows 10 x64</td>
-			<td>找不到！</a></td>
+			<td> RayLink_Setup.exe</td>
+						<td>2bhj</td>
+			<td><a href="https://wwdn.lanzoue.com/i7RcE0zb4gfc"></a>下载</a></td>
 	
 		</tr>     
 		</tr>     	  	
 	  <tr>
-			<td>windows 10 x64</td>
-			<td>169505021</a></td>
+			<td> RayLink_Setup.apk</td>
+		  <td>bbp8</td>/td>
+			<td><a href="https://wwdn.lanzoue.com/iFqkh0zb4fzg"></a></td>
 	
 		</tr>     
 		</tr>     	  
- <tr>
-			<td>windows 10 x64</td>
-			<td>275829345</a></td>
-	
-		</tr>     
-		</tr>     
-<tr>
-			<td>windows 10 x64</td>
-			<td>274796998</a></td>
-	
-		</tr>     
-		</tr>     
+
     	
 	    </table>
 	    </div>
