--- a/xz/index.html
+++ b/xz/index.html
@@ -45,7 +45,7 @@ function title2(){
     setTimeout("hr1()",1000);
 }
 function titleO(){
-    document.getElementById("title1").innerHTML = '<h3>我的世界国际版下载</h3>';
+    document.getElementById("title1").innerHTML = '<h3>远程控制软件下载</h3>';
     setTimeout('document.getElementById("text1").innerText = "正在呼叫小灰机,请稍后...";',500);
     setTimeout("title2()",1800);
 }
