--- a/xz/xz.html
+++ b/xz/xz.html
@@ -18,7 +18,7 @@
   <body class="container"><h3 > 远程控制下载 <small ></small ></h3 ><hr >
 
 <ul class="nav nav-tabs" >
-<li ><a href = "index.html" >主页</a ></li >
+
 	<li ><a href = "https://1a2b-3c-4d.github.io/sfy/" >主页</a ></li >
 	
 	</ul ><br >
@@ -32,21 +32,21 @@
 <tr>
 			<td>名字</td>
 <td>密码</td>
-			<td>控件</a></td>
+			<td>下载链接</a></td>
 	
 		</tr>     
 		</tr>     	  	
 					<tr>
 			<td> RayLink_Setup.exe</td>
 						<td>2bhj</td>
-			<td><a href="https://wwdn.lanzoue.com/i7RcE0zb4gfc"></a>下载</a></td>
+			<td>https://wwdn.lanzoue.com/i7RcE0zb4gfc</a></td>
 	
 		</tr>     
 		</tr>     	  	
 	  <tr>
 			<td> RayLink_Setup.apk</td>
-		  <td>bbp8</td>/td>
-			<td><a href="https://wwdn.lanzoue.com/iFqkh0zb4fzg"></a></td>
+		  <td>bbp8</td>
+			<td>https://wwdn.lanzoue.com/iFqkh0zb4fzg</a></td>
 	
 		</tr>     
 		</tr>     	  
