--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	        		<span class="subheading">十方云电脑项目</span>
-	            <h1 class="mb-3"><span>公益免费,</span> <span>TODESK极低延迟,</span> <span>简单易用。</span></h1>
+	            <h1 class="mb-3"><span>公益免费,</span> <span>极低延迟,</span> <span>简单易用。</span></h1>
 	            <p>免费的云电脑，挂机时常2h30min(不代表所有时间！)</p>
 	            <p><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=-l5cDEMRJpWR02qi8fBCH2tDlrnInfM4&authKey=V5e6qzOCVVOnowTRS8tYdh93fdUQuHRiVaEEL1JzMiYbDGhZeepxzpjmrEKg8e7s&noverify=0&group_code=761392004" class="btn btn-secondary px-4 py-3">加入QQ</a></p>
 	         
@@ -66,6 +66,28 @@
     			<div class="col-sm ftco-animate">
     				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
 					<div style="text-align: center;">主流系统全支持！</div>
+    			</div>
+    			</div>
+    </section>
+	   <section class="ftco-section ftco-partner">
+    	<div class="container">
+		<div><h1>参与我们</h1></div>
+    		<div class="row">
+    			<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/1.png" class="img-fluid" alt="Minecraft"></a>
+					<div style="text-align: center;">十方</div>
+				<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="Minecraft"></a>
+					<div style="text-align: center;">阿伟</div>
+					<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
+					<div style="text-align: center;">没有了</div>
+						<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
+					<div style="text-align: center;">没有了</div>
+							<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
+					<div style="text-align: center;">没有了</div>
     			</div>
     			</div>
     </section>
