--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             	</div>
               <div class="media-body pl-4">
                 <h3 class="heading">TODESK</h3>
-                <p>使用TODESK因为我们没有IPV6</p><a href="https://www.todesk.com/">下载todesk</a>				</div>
+                <p>使用第三方远程控制软件因为我们没有IPV6</p><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html">下载</a>				</div>
             </div>      
           </div>
         </div>
