--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
     				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/1.png" class="img-fluid" alt="Minecraft"></a>
 					<div style="text-align: center;">十方</div>
 				<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="Minecraft"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="Rusted Warfare"></a>
 					<div style="text-align: center;">阿伟</div>
 					<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Mindustry"></a>
 					<div style="text-align: center;">没有了</div>
 						<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Terraria"></a>
 					<div style="text-align: center;">没有了</div>
 							<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
 					<div style="text-align: center;">没有了</div>
     			</div>
     			</div>
