--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
+			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">我们的服务器网站</a></li>
 	          <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="nav-link">我们的服务器网站</a></li>
                <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/abc/" class="nav-link">账号分发网站</a></li>
 			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
@@ -141,7 +142,7 @@
             		<span class="flaticon-settings"></span>
             	</div>
               <div class="media-body pl-4">
-                <h3 class="heading">TODESK</h3>
+                <h3 class="heading">远程控制软件下载</h3>
                 <p>使用第三方远程控制软件因为我们没有IPV6</p><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html">下载</a>				</div>
             </div>      
           </div>
