--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">我们的服务器网站</a></li>
+			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">下载</a></li>
 	          <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="nav-link">我们的服务器网站</a></li>
                <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/abc/" class="nav-link">账号分发网站</a></li>
 			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
@@ -110,7 +110,7 @@
             	</div>
               <div class="media-body pl-4">
                 <h3 class="heading">用户群体</h3>
-                <p>8人</p>
+                <p>20+人</p>
               </div>
             </div>      
           </div>
