--- a/index.html
+++ b/index.html
@@ -62,13 +62,30 @@
 
     <section class="ftco-section ftco-partner">
     	<div class="container">
-		<div><h1>我们支持的系统</h1></div>
+		<div><h1>参与我们的人</h1></div>
     		<div class="row">
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Minecraft"></a>
-					<div style="text-align: center;">主流系统全支持！</div>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/1.png" class="img-fluid" alt="Minecraft"></a>
+					<div style="text-align: center;">十方</div>
     			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="Rusted Warfare"></a>
+					<div style="text-align: center;">西北风</div>
     			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/3.png" class="img-fluid" alt="Mindustry"></a>
+					<div style="text-align: center;">阿伟</div>
+    			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/terraria.png" class="img-fluid" alt="Terraria"></a>
+					<div style="text-align: center;">无</div>
+    			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
+					<div style="text-align: center;">无</div>
+    			</div>
+    		</div>
+    	</div>
     </section>
 	 
     
