--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div style="text-align: center;">阿伟</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/terraria.png" class="img-fluid" alt="Terraria"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Terraria"></a>
 					<div style="text-align: center;">无</div>
     			</div>
     			<div class="col-sm ftco-animate">
