--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 					<div style="text-align: center;">无</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
-					<div style="text-align: center;">无</div>
+    				<a href="zzt.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
+					<div style="text-align: center;">更多</div>
     			</div>
     		</div>
     	</div>
