--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">下载</a></li>
-	          <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="nav-link">我们的服务器网站</a></li>
-               <li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/abc/" class="nav-link">账号分发网站</a></li>
+	         
 			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
 			<li class="nav-item cta active"><a href="1.html" class="nav-link">开始使用</a></li>
 	        </ul>
@@ -352,9 +351,10 @@
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">相关教学视频</h2>
+              <h2 class="ftco-heading-2">相关网站</h2>
 				 <ul class="list-unstyled">
-					 <li><a>没有qwq</a> </ul>
+					 <li><a href="https://1a2b-3c-4d.github.io/nybz/index.html">我们的minecarft server网站</a></li>
+				 <li><a href="https://1a2b-3c-4d.github.io/abc/">minecarft 正版账号分发</a></li></ul>
             </div>
           </div>
    
