--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 					<div style="text-align: center;">阿伟</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/more.png" class="img-fluid" alt="Terraria"></a>
-					<div style="text-align: center;">无</div>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/4.png" class="img-fluid" alt="Terraria"></a>
+					<div style="text-align: center;">╬═☆陂讉朢洅街角旳婞楅 </div>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="zzt.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
