--- a/xz/xz.html
+++ b/xz/xz.html
@@ -39,14 +39,14 @@
 					<tr>
 			<td> RayLink_Setup.exe</td>
 						<td>2bhj</td>
-			<td>https://wwdn.lanzoue.com/i7RcE0zb4gfc</a></td>
+			<td><a href="https://wwdn.lanzoue.com/i7RcE0zb4gfc"> <button type="button" class="btn btn-info btn-xs">跳转</button></a></td>
 	
 		</tr>     
 		</tr>     	  	
 	  <tr>
 			<td> RayLink_Setup.apk</td>
 		  <td>bbp8</td>
-			<td>https://wwdn.lanzoue.com/iFqkh0zb4fzg</a></td>
+			<td><a href="https://wwdn.lanzoue.com/iFqkh0zb4fzg"> <button type="button" class="btn btn-info btn-xs">跳转</button></a></td>
 	
 		</tr>     
 		</tr>     	  
