--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">下载</a></li>
-	         
+	         <li class="nav-item active"><a href="zzt.html" class="nav-link">赞助我们</a></li>
 			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
 			<li class="nav-item cta active"><a href="1.html" class="nav-link">开始使用</a></li>
 	        </ul>
@@ -64,20 +64,20 @@
 		<div><h1>参与我们的人</h1></div>
     		<div class="row">
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/1.png" class="img-fluid" alt="Minecraft"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/1.png" class="img-fluid" alt="十方"></a>
 					<div style="text-align: center;">十方</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="Rusted Warfare"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="西北风"></a>
 					<div style="text-align: center;">西北风</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/3.png" class="img-fluid" alt="Mindustry"></a>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/3.png" class="img-fluid" alt="阿伟"></a>
 					<div style="text-align: center;">阿伟</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/4.png" class="img-fluid" alt="Terraria"></a>
-					<div style="text-align: center;">╬═☆陂讉朢洅街角旳婞楅 </div>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/4.png" class="img-fluid" alt="╬═☆陂讉朢洅街角旳婞楅"></a>
+					<div style="text-align: center;">╬═☆陂讉朢洅街角旳婞楅</div>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="zzt.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
