--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-start">
-	      	<img class="one-third js-fullheight align-self-end order-md-first img-fluid" src="images/u=3258571338,2779685785&fm=253&fmt=auto&app=138&f=JPEG.webp" alt="">
+	      	<img class="one-third js-fullheight align-self-end order-md-first img-fluid" src="images/bj.png" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	        		<span class="subheading">十方云电脑项目</span>
