--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 					<div style="text-align: center;">西北风</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/3.png" class="img-fluid" alt="阿伟"></a>
-					<div style="text-align: center;">阿伟</div>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/5.png" class="img-fluid" alt="机战王＆泣无生"></a>
+					<div style="text-align: center;">机战王＆泣无生</div>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/4.png" class="img-fluid" alt="╬═☆陂讉朢洅街角旳婞楅"></a>
