--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -31,6 +32,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
+				<li class="nav-item active"><a href="login.html" class="nav-link">登录</a></li>
 			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">下载</a></li>
 	         <li class="nav-item active"><a href="zzt.html" class="nav-link">赞助我们</a></li>
 			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
@@ -77,7 +79,7 @@
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/4.png" class="img-fluid" alt="╬═☆陂讉朢洅街角旳婞楅"></a>
-					<div style="text-align: center;">╬═☆陂讉朢洅街角旳婞楅</div>
+					<div style="text-align: center;">funi云</div>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="zzt.html" class="partner"><img src="images/more.png" class="img-fluid" alt="more"></a>
