--- a/1.html
+++ b/1.html
@@ -1,6 +1,7 @@
 
 	<head>
-    <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
+		<meta charset="UTF-8">
+    <meta http-equiv=”Content-Type” content=”text/html; charset="UTF-8">
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<title>十方云</title>
 	<link rel="icon" type="image/icon.png" sizes="72x72" href="images/icon.png"/>
@@ -52,6 +53,36 @@
 	
 		</tr>     
 		</tr>     
+<tr>
+			<td>windows 10 x64</td>
+			<td>651506658</td>
+	<td>小黑子</td>
+	<td>2c2g,32GB</td>
+	<td>3day</a></td>
+	</td>
+	
+		</tr>     
+		</tr>     
+<tr>
+			<td>windows 10 x64</td>
+			<td>435757684</td>
+	<td>chen12</td>
+	<td>2c2g,32GB</td>
+	<td>3day</a></td>
+	</td>
+	
+		</tr>     
+		</tr>     
+<tr>
+			<td>windows 10 x64</td>
+			<td>142515726</td>
+	<td>云神</td>
+	<td>2c2g,32GB</td>
+	<td>1day</a></td>
+	</td>
+	
+		</tr>     
+		</tr>     
 
 	
 	
@@ -63,4 +94,4 @@
 						
 	</tbody>
 
-</table>© 2023-2023 十方云 | <a href='github.com'>github</a> 提供云计算支持 
+</table>© 2023-2023 十方云 
