--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="login.html" class="nav-link">登录</a></li>
-			<li class="nav-item active"><a href="https://1a2b-3c-4d.github.io/sfy/xz/index.html" class="nav-link">下载</a></li>
-	         <li class="nav-item active"><a href="zzt.html" class="nav-link">赞助我们</a></li>
+
 			<li class="nav-item active"><a href="ab/index.html" class="nav-link">关于我们</a></li>
-			<li class="nav-item cta active"><a href="1.html" class="nav-link">开始使用</a></li>
+			<li class="nav-item cta active"><a href="http://ash656131750430.hostsh1.99web.top/" class="nav-link">开始使用</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -70,12 +68,12 @@
 					<div style="text-align: center;">十方</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/2.png" class="img-fluid" alt="西北风"></a>
-					<div style="text-align: center;">西北风</div>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="https://s1.ax1x.com/2023/07/30/pPpN8yD.jpg" class="img-fluid" alt="西北风"></a>
+					<div style="text-align: center;">CMD</div>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/5.png" class="img-fluid" alt="机战王＆泣无生"></a>
-					<div style="text-align: center;">机战王＆泣无生</div>
+    				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="https://s1.ax1x.com/2023/07/30/pPpNQW6.jpg" class="img-fluid" alt="机战王＆泣无生"></a>
+					<div style="text-align: center;">晴朗2017</div>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="https://1a2b-3c-4d.github.io/nybz/index.html" class="partner"><img src="images/4.png" class="img-fluid" alt="╬═☆陂讉朢洅街角旳婞楅"></a>
